--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.16.2",
     "echarts": "^3.3.2",
     "element-ui": "^1.2.8",
     "font-awesome": "^4.7.0",
     "nprogress": "^0.2.0",
     "vue": "^2.2.2",
+    "vue-axios": "^2.0.2",
     "vue-router": "^2.3.0",
     "vuex": "^2.0.0-rc.6"
   },
